--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
         "sweetalert2": "^11.10.4",
+        "tailwindcss": "^3.2.1",
         "vite": "^5.0.0",
         "vue": "^3.4.0",
         "vue-i18n": "^9.9.0",
+        "vue-the-mask": "^0.11.1",
         "vue-toastification": "^2.0.0-rc.5"
     }
 }
