--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
         "vue-i18n": "^9.9.0",
         "vue-the-mask": "^0.11.1",
         "vue-toastification": "^2.0.0-rc.5"
+    },
+    "dependencies": {
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "lucide-vue-next": "^0.358.0",
+        "radix-vue": "^1.5.2",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
