--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
         "vue-i18n": "^9.10.2",
         "vue-the-mask": "^0.11.1",
         "vue-toastification": "^2.0.0-rc.5"
+    },
+    "dependencies": {
+        "vue-multiselect": "^3.0.0-beta.3"
     }
 }
