--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/vue-fontawesome": "latest-3",
         "@inertiajs/vue3": "^1.0.15",
         "@tailwindcss/forms": "^0.5.7",
+        "@types/fabric": "^5.3.7",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vueuse/core": "^10.9.0",
         "autoprefixer": "^10.4.19",
@@ -36,6 +37,7 @@
         "vue-toastification": "^2.0.0-rc.5"
     },
     "dependencies": {
+        "fabric": "^5.3.0",
         "vue-multiselect": "^3.0.0-beta.3",
         "vue-qrcode-reader": "^5.5.3"
     }
