--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "league/flysystem-aws-s3-v3": "3.0",
         "maatwebsite/excel": "3.1.55",
         "spatie/laravel-permission": "^6.3",
+        "spatie/laravel-query-builder": "^6.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
