--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
+        "build": "vite build -l silent",
         "dev": "vite",
         "format": "npx @biomejs/biome format --write ./resources/js"
     },
