--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "vue-toastification": "^2.0.0-rc.5"
     },
     "dependencies": {
+        "@primevue/themes": "^4.0.2",
+        "primevue": "^4.0.2",
         "vue-multiselect": "^3.0.0-beta.3",
         "vue-qrcode-reader": "^5.5.3"
     }
