--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "@primevue/themes": "^4.0.2",
+        "primeicons": "^7.0.0",
         "primevue": "^4.0.2",
         "vue-multiselect": "^3.0.0-beta.3",
         "vue-qrcode-reader": "^5.5.3"
