--- a/package.json
+++ b/package.json
@@ -7,30 +7,29 @@
         "format": "npx @biomejs/biome format --write ./resources/js"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.5.1",
-        "@fortawesome/free-brands-svg-icons": "^6.5.1",
-        "@fortawesome/free-regular-svg-icons": "^6.5.1",
-        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-brands-svg-icons": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "latest-3",
-        "@inertiajs/vue3": "^1.0.15",
-        "@primevue/themes": "^4.0.2",
+        "@inertiajs/vue3": "^1.2.0",
+        "@primevue/themes": "^4.0.4",
         "@tailwindcss/forms": "^0.5.7",
-        "@vitejs/plugin-vue": "^5.0.4",
-        "autoprefixer": "^10.4.19",
-        "axios": "^1.6.8",
+        "@vitejs/plugin-vue": "^5.1.2",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.3",
         "date-fns": "^3.6.0",
-        "laravel-vite-plugin": "^1.0.2",
-        "postcss": "^8.4.38",
+        "laravel-vite-plugin": "^1.0.5",
+        "postcss": "^8.4.40",
         "primeicons": "^7.0.0",
-        "primevue": "^4.0.2",
-        "sweetalert2": "^11.10.7",
-        "tailwindcss": "^3.4.3",
-        "vite": "^5.2.7",
-        "vue-i18n": "^9.10.2",
-        "vue-multiselect": "^3.0.0-beta.3",
-        "vue-qrcode-reader": "^5.5.3",
+        "primevue": "^4.0.4",
+        "sweetalert2": "^11.12.4",
+        "tailwindcss": "^3.4.7",
+        "vite": "^5.3.5",
+        "vue": "^3.4.35",
+        "vue-i18n": "^9.13.1",
+        "vue-qrcode-reader": "^5.5.7",
         "vue-the-mask": "^0.11.1",
-        "vue-toastification": "^2.0.0-rc.5",
-        "vue": "^3.4.21"
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
