--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,7 @@
       "arrowParentheses": "always",
       "jsxQuoteStyle": "double",
       "semicolons": "always",
-      "trailingComma": "all",
+      "trailingCommas": "all",
       "quoteProperties": "asNeeded",
       "bracketSpacing": true,
       "bracketSameLine": false
