--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "^1.7.3",
         "date-fns": "^3.6.0",
         "laravel-vite-plugin": "^1.0.5",
+        "pinia": "^2.2.1",
         "postcss": "^8.4.40",
         "primeicons": "^7.0.0",
         "primevue": "^4.0.4",
