--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "3.0",
         "maatwebsite/excel": "3.1.55",
+        "savannabits/primevue-datatables": "*",
         "spatie/laravel-permission": "^6.3",
         "spatie/laravel-query-builder": "^6.0",
         "tightenco/ziggy": "^1.0"
