--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@primevue/themes": "^4.0.4",
         "@tailwindcss/forms": "^0.5.7",
         "@vitejs/plugin-vue": "^5.1.2",
+        "apexcharts": "^3.52.0",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.3",
         "date-fns": "^3.6.0",
@@ -31,6 +32,7 @@
         "vue-i18n": "^9.13.1",
         "vue-qrcode-reader": "^5.5.7",
         "vue-the-mask": "^0.11.1",
-        "vue-toastification": "^2.0.0-rc.5"
+        "vue-toastification": "^2.0.0-rc.5",
+        "vue3-apexcharts": "^1.5.3"
     }
 }
