--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - vhostd:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - acme:/etc/acme.sh
+      - ./.docker/nginx/client_max_body_size.conf:/etc/nginx/conf.d/client_max_body_size.conf
     labels:
       - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
 
@@ -45,6 +46,7 @@ services:
       - VIRTUAL_PORT=80
     volumes:
       - .:/var/www
+      - ./.docker/nginx/client_max_body_size.conf:/etc/nginx/conf.d/client_max_body_size.conf
     depends_on:
       - nginx-proxy
       - letsencrypt
