--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "vue-qrcode-reader": "^5.5.10",
         "vue-toastification": "^2.0.0-rc.5",
         "vue3-apexcharts": "^1.6.0"
+    },
+    "devDependencies": {
+        "@types/qs": "^6.9.16"
     }
 }
