--- a/composer.json
+++ b/composer.json
@@ -6,30 +6,28 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^0.6.8",
-        "laravel/framework": "^10.10",
-        "laravel/octane": "^2.4",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "league/flysystem-aws-s3-v3": "3.0",
-        "maatwebsite/excel": "3.1.55",
-        "savannabits/primevue-datatables": "*",
-        "spatie/laravel-permission": "^6.3",
-        "spatie/laravel-query-builder": "^6.0",
-        "tightenco/ziggy": "^1.0"
+        "guzzlehttp/guzzle": "^7.9.2",
+        "inertiajs/inertia-laravel": "^1.3.0",
+        "laravel/framework": "^11.30",
+        "laravel/octane": "^2.5.9",
+        "laravel/sanctum": "^4.0.3",
+        "laravel/tinker": "^2.10.0",
+        "league/flysystem-aws-s3-v3": "^3.29.0",
+        "maatwebsite/excel": "^3.1.58",
+        "spatie/laravel-permission": "^6.9.0",
+        "tightenco/ziggy": "^2.3.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.10",
-        "fakerphp/faker": "^1.9.1",
-        "laravel-lang/common": "^6.1",
-        "laravel/breeze": "^1.28",
-        "laravel/pint": "^1.17",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "barryvdh/laravel-debugbar": "^3.14.6",
+        "fakerphp/faker": "^1.23.1",
+        "laravel-lang/common": "^6.4.0",
+        "laravel/breeze": "^2.2.4",
+        "laravel/pint": "^1.18.1",
+        "laravel/sail": "^1.37.1",
+        "mockery/mockery": "^1.6.12",
+        "nunomaduro/collision": "^8.5.0",
+        "phpunit/phpunit": "^11.4.3",
+        "spatie/laravel-ignition": "^2.8.0"
     },
     "autoload": {
         "psr-4": {
