--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "primeicons": "^7.0.0",
         "primevue": "^4.0.7",
         "qs": "^6.13.0",
+        "quill": "^2.0.3",
+        "quill-mention": "^6.0.2",
         "tailwindcss": "^3.4.13",
         "vite": "^5.4.8",
         "vue": "^3.5.11",
