--- a/package.json
+++ b/package.json
@@ -14,30 +14,28 @@
         "@fortawesome/vue-fontawesome": "latest-3",
         "@inertiajs/vue3": "^2.0.0",
         "@primevue/themes": "^4.2.5",
+        "@tailwindcss/forms": "^0.5.9",
+        "@types/qs": "^6.9.17",
+        "@vitejs/plugin-vue": "^5.2.1",
         "apexcharts": "^4.3.0",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "date-fns": "^4.1.0",
+        "laravel-vite-plugin": "^1.1.1",
         "pinia": "^2.3.0",
+        "postcss": "^8.4.49",
         "primeicons": "^7.0.0",
         "primevue": "^4.2.5",
         "qs": "^6.13.1",
         "quill": "^2.0.3",
         "quill-mention": "^6.0.2",
+        "tailwindcss": "^3.4.17",
+        "vite": "^6.0.6",
         "vue": "^3.5.13",
         "vue-i18n": "^11.0.1",
         "vue-qrcode-reader": "^5.7.0",
         "vue-toastification": "^2.0.0-rc.5",
         "vue3-apexcharts": "^1.8.0",
         "ziggy-js": "^2.4.1"
-    },
-    "devDependencies": {
-        "@tailwindcss/forms": "^0.5.9",
-        "@types/qs": "^6.9.17",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "autoprefixer": "^10.4.20",
-        "laravel-vite-plugin": "^1.1.1",
-        "postcss": "^8.4.49",
-        "tailwindcss": "^3.4.17",
-        "vite": "^6.0.6"
     }
 }
