--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["resources/js/*"],
+            "@Users/*": ["./Modules/Users/Resources/*"],
             "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     },
