add core module

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,6 +16,9 @@
             ],
             "@Dashboard/*": [
                 "./Modules/Dashboard/Resources/*"
+            ],
+            "@Core/*": [
+                "./Modules/Core/Resources/*"
             ]
         }
     },
