Add database factories and seeders for Fields module
- Created factories for various Fields module models: Dog, Field, Harvest, Machinery, Owner, Plant, Quarter, SecurityEquipment, and Tool
- Added corresponding seeders for these models to populate test data
- Updated composer.json to include database seeders namespace
- Modified service providers to use loadMigrationsFrom method
- Updated DatabaseSeeder to include new seeders for local environment

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/",
-            "Modules\\": "Modules/"
+            "Modules\\": "Modules/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "scripts": {
