--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,17 +13,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '22'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build project
-      run: npm run build
-
     - name: Deploy to EC2
       uses: appleboy/ssh-action@v0.1.3
       with:
@@ -37,6 +26,8 @@ jobs:
           sudo systemctl stop php8.3-fpm
           sudo systemctl stop octane
           git pull origin main
+          npm install
+          npm run build
           composer install --optimize-autoloader --no-dev
           composer dump-autoload
           php artisan migrate --force
@@ -44,13 +35,3 @@ jobs:
           sudo systemctl start octane
           sudo systemctl start php8.3-fpm
           sudo systemctl start nginx
-
-    - name: Copy build to EC2
-      uses: appleboy/scp-action@v0.1.0
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        port: 22
-        source: 'build/*'
-        target: '/home/ubuntu/laratrufas/build'
