--- a/package.json
+++ b/package.json
@@ -12,30 +12,33 @@
         "@fortawesome/free-regular-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/vue-fontawesome": "latest-3",
-        "@inertiajs/vue3": "^2.0.3",
-        "@primevue/themes": "^4.2.5",
-        "@tailwindcss/forms": "^0.5.9",
+        "@inertiajs/vue3": "^2.0.7",
+        "@primevue/themes": "^4.3.3",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/vite": "^4.1.3",
         "@types/qs": "^6.9.18",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "apexcharts": "^4.4.0",
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.9",
+        "@vitejs/plugin-vue": "^5.2.3",
+        "apexcharts": "^4.5.0",
+        "autoprefixer": "^10.4.21",
+        "axios": "^1.8.4",
         "date-fns": "^4.1.0",
         "laravel-vite-plugin": "^1.2.0",
         "pinia": "^3.0.1",
-        "postcss": "^8.5.2",
         "primeicons": "^7.0.0",
-        "primevue": "^4.2.5",
+        "primevue": "^4.3.3",
         "qs": "^6.14.0",
         "quill": "^2.0.3",
         "quill-mention": "^6.0.2",
-        "tailwindcss": "^3.4.17",
-        "vite": "^6.1.0",
+        "vite": "^6.2.5",
         "vue": "^3.5.13",
-        "vue-i18n": "^11.1.1",
+        "vue-i18n": "^11.1.3",
         "vue-qrcode-reader": "^5.7.1",
         "vue-toastification": "^2.0.0-rc.5",
         "vue3-apexcharts": "^1.8.0",
-        "ziggy-js": "^2.5.1"
+        "ziggy-js": "^2.5.2"
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.3",
+        "tailwindcss": "^4.1.3"
     }
 }
