--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.8.0",
         "phpunit/phpunit": "^11.5.17",
-        "spatie/laravel-ignition": "^2.9.1"
+        "spatie/laravel-ignition": "^2.9.1",
+        "tightenco/duster": "^3.2"
     },
     "autoload": {
         "psr-4": {
