--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.4",
         "date-fns": "^4.1.0",
+        "jspdf": "^3.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "laravel-vue-i18n": "^2.8.0",
         "pinia": "^3.0.1",
